fix: change collect to toList